<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="gaderesa.com.demoappgeogaderesav2.fragments.ModoOffline">


    <Button

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:id="@+id/btnActualizarDatosCrd1O"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/txtGeolocalizacionActualizarO"
        android:textAlignment="center"
        android:layout_below="@+id/lblGeolocalizacionActualizarO"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="18sp" />

    <TextView android:id="@+id/lblGeolocalizacionActualizarO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblGeolocalizacionActualizar"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_weight="1"
        android:layout_marginTop="60dp"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_below="@+id/txtAutoCardCodeo"
        android:layout_alignStart="@+id/lblMO"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Modo Offline - Actualización de Datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:id="@+id/lblMO"
        tools:ignore="HardcodedText,InvalidId"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtAutoCardCodeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UnknownIdInLayout"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/lblMO"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="10"

            android:text=""
            android:hint="@string/lblManifiesto"
            android:id="@+id/txtManifiesto"
            tools:ignore="LabelFor"
            android:layout_marginTop="13dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/btnActualizarO"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/iniciar_actualizaciones"
        android:layout_above="@+id/btnActualizarDatosCrd1O"
        android:layout_centerHorizontal="true" />


</RelativeLayout>